--- a/HippoSupermecado/app/src/main/res/values/strings.xml
+++ b/HippoSupermecado/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">HippoSupermecado</string>
+    <string name="app_name">Hippo Supermecado</string>
+    
+    <string name="openDrawer">Abrir Menu</string>
+    <string name="closeDrawer">Fechar Menu</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
